Bug 141386 - Alternative text from screenshots is only recognised by the PDF Accessibility Checker (PAC 3) after closing and reopening when exporting to a PDF file.
Summary: Alternative text from screenshots is only recognised by the PDF Accessibility...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.4.1.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2021-03-31 13:38 UTC by SusanneMohn
Modified: 2025-11-23 08:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PAC tool with a freshly created PDF (33.68 KB, image/png)
2023-01-18 15:15 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SusanneMohn 2021-03-31 13:38:07 UTC
Description:
Pictures can be inserted via Insert - Picture. If you enter an alternative text for the image, it will be recognised after export to a PDF file. 
If you insert a screenshot with alternative text, it will only be recognised when the file is closed and reopened and then exported as a PDF file. 
Message PAC 3: Alternative text Not available  
Download PAC 3: https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac/download-pac-3.html

Steps to Reproduce:
1. Windows: Create screenshot with CTRL+ALT+S. 
2. Insert into the document with CTRL + V.
3. Save document 
4. Export as PDF
5. Start PAC 3: "Message Alternative text Not available".  
6. Reopen document, export again as PDF
7. No message in the PAC-3 tool8. 
First recognize the bug wirh LO 6.4. - all versions

Actual Results:
No alternate TExt

Expected Results:
Alternate text before cloing the document


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
nothing
Comment 1 SusanneMohn 2021-07-06 11:29:30 UTC
In Version 7.1.4 tritt der Fehler weiterhin auf
Comment 2 SusanneMohn 2021-07-27 13:31:58 UTC
This behaviour is still present in version 7.1.4: The PDF export must be carried out twice so that the alternative text is recognised in the screenshot.
Comment 3 Dieter 2021-11-19 08:06:32 UTC
I confirm it with

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b8f630db30ee0066a9f4b6e540368d2fcad7fa8
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Additional informations
LO accessibility check accepts the file also during first PDF export.
Comment 4 Michael Stahl 2022-11-25 13:58:36 UTC
step 2.5 is missing: set an alt-text in the properties dialog of the image
Comment 5 Commit Notification 2022-11-29 15:12:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae132145ff42a95dc24fb124847c04af4b8c8dab

tdf#141386 svx,sw: fix setting name/title/description on SwVirtFlyDrawObj

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2022-11-29 15:14:57 UTC
this was non-obvious... there is a problem here that causes the svx part of the PDF export code to not retrieve the properties that are set via the dialog.

but with the fix 122b4264d23df8b11419839ba700b88c4f936a6c "tdf#57423 sw: PDF/UA export: Alt texts for SwNoTextNode" for the sw part of the PDF export, that problem does not exist any more.

still, there are other clients of the svx/drawinglayer code that want to extract these properties, so i fixed that part anyway.
Comment 7 Commit Notification 2022-12-03 21:04:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/40253b20de74e2a289c89367189fd5b32b20d676

tdf#141386 svx,sw: fix setting name/title/description on SwVirtFlyDrawObj

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabor Kelemen (Collabora) 2023-01-18 15:15:44 UTC
Created attachment 184755 [details]
PAC tool with a freshly created PDF

Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

No warning about missing alternative description.